# melodic-nornet

./: .travis.yml  CMakeLists.txt  ChangeLog  README  UpdateDoc1.sed  UpdateDocFiles  clean-deb  debian.conf  make-dist  make-ppa  melodic-nornet.lsm  melodic.lsm  packaging.conf
background/: Affiliation.text  CMakeLists.txt  Name.text  Settings.input  Subtitle.text  Title.text  URL.text  build-caption  build-overlay  make-caption  make-overlay  overlay.msl
background/gimp-scripts/: Make-Background  Make-Caption  Make-Cloth  Make-Logo  Make-Mosaic  Make-OldPhoto  Make-Painting  Resize-with-Cropping  Test-Gimp
ci/: install  run-test
debian/: changelog  control  copyright  melodic-compute.install  melodic-compute.postrm  melodic-controller.install  melodic-controller.postinst  melodic-controller.postrm  melodic-desktop.install  melodic-desktop.lintian-overrides  melodic-desktop.postinst  melodic-desktop.postrm  melodic-development.install  melodic-development.postinst  melodic-development.postrm  melodic-management.install  melodic-management.manpages  melodic-management.postinst  melodic-management.postrm  melodic-management.prerm  melodic-server.examples  melodic-server.install  melodic-server.postrm  melodic-storage.install  melodic-storage.postinst  melodic-storage.postrm  not-installed  rules  watch
debian/upstream/: metadata
grub/: 06_melodic_server_theme  12_melodic_storage_theme  19_melodic_development_theme  CMakeLists.txt
rpm/: melodic-nornet.spec
src/: BUGS  CMakeLists.txt  Create-MELODIC-Server  Delete-MELODIC-Server  MELODIC-System-Info  MELODIC-System-Info.1  Make-Server  build-and-install  debian.conf
src/OpenStack/: neutron.conf.orig  nova.conf.orig
src/background/: Affiliation.text  CMakeLists.txt  Make-Background  Make-Logo  Make-Mosaic  Make-Painting  Name.text  Settings.input  Subtitle.text  Title.text  URL.text  build-caption  build-overlay  image-resize-with-cropping  images-to-pdf-a4  make-a4  make-bootsplash  make-desktop  make-logo-texts  make-overlay
src/background/Input/: exiftool.argfile
src/background/gimp-scripts/: Make-Background  Make-Caption  Make-Cloth  Make-Logo  Make-OldPhoto  Make-Painting  Test-Gimp
src/cloud-init/: CMakeLists.txt  cloud.cfg
src/debian/: changelog  control  melodic-desktop.install  melodic-development.postinst  melodic-management.postinst  melodic-management.postrm  melodic-management.prerm  melodic-server.install  watch
src/docs/: OpenStack-Configuration.wiki
src/grub/: 02_melodic_management_theme  06_melodic_server_theme  08_melodic_desktop_theme  11_melodic_compute_theme  12_melodic_storage_theme  15_melodic_compute_theme  19_melodic_controller_theme  19_melodic_development_theme  CMakeLists.txt
src/images/: Build-Images  MELODIC.config  MELODIC.preseed  TODO  make-it  preseed.cfg
src/src/: MELODIC-System-Info
src/src/background/: Make-Logo  make-all
src/src/grub/: grub-defaults
src/system-info.d/: 15-melodic
src/system-maintenance.d/: 15-melodic
src/tests/: backup-configs  snaroeya.nntb.no  snaroeya.simula.nornet.yaml  warszawa.nntb.no
src/tests/VM-snaroeya.nntb.no/: hostname  hosts  network.yaml  sources.list  sudoers  sysctl.conf
src/tests/VM-warszawa.nntb.no/: 00-installer-config.yaml  hostname  hosts  network.yaml
