#############################################################################
#### EXAMPLE CONFIGURATION FILES                                         ####
#############################################################################

INSTALL(FILES cloud.cfg DESTINATION ${CMAKE_INSTALL_DATADIR}/melodic-nornet)
